scss/fix: menu quebrando após adicionar a busca, corrigido com um white-space: nowrap no scss da nav ul

--- a/src/layout/Header/index.scss
+++ b/src/layout/Header/index.scss
@@ -26,35 +26,38 @@ header.main-header {
   }
 
   nav {
-    ul li {
-      display: inline-block;
-      height: 40px;
-      margin: 0 12px;
-      font-size: 14px;
-      letter-spacing: 1px;
-      -webkit-font-smoothing: antialiased !important;
+    ul {
+      white-space: nowrap;
+      li {
+        display: inline-block;
+        height: 40px;
+        margin: 0 12px;
+        font-size: 14px;
+        letter-spacing: 1px;
+        -webkit-font-smoothing: antialiased !important;
 
-      &:nth-last-child(1) {
-        margin-right: 9px;
-      }
+        &:nth-last-child(1) {
+          margin-right: 9px;
+        }
 
-      a {
-        font-family: $font-nav;
-        font-weight: 600;
-        transition: all 0.5s;
-      }
-      &.active {
-        color: $color-focus;
-      }
+        a {
+          font-family: $font-nav;
+          font-weight: 600;
+          transition: all 0.5s;
+        }
+        &.active {
+          color: $color-focus;
+        }
 
-      .bullet {
-        display: block;
-        margin: 0 auto;
-        width: 7px;
-        height: 7px;
-        border-radius: 5px;
-        background-color: $color-focus;
-        margin-top: 7px;
+        .bullet {
+          display: block;
+          margin: 0 auto;
+          width: 7px;
+          height: 7px;
+          border-radius: 5px;
+          background-color: $color-focus;
+          margin-top: 7px;
+        }
       }
     }
   }
